apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'application'

group = 'de.wellnerbou'
version = '1.6.0-SNAPSHOT'

description = """chronicreplay"""

mainClassName = "de.wellnerbou.chronic.replay.ChronicReplay"

sourceCompatibility = 1.8
targetCompatibility = 1.8

run {
	if ( project.hasProperty('args') ) {
		args project.args.split('\\s+')
	}
}

test {
	filter { includeTestsMatching "*Test" }
}

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {
	compile group: 'com.ning', name: 'async-http-client', version:'1.7.22'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.3'
    compile 'com.lexicalscope.jewelcli:jewelcli:0.8.9'
	compile group: 'joda-time', name: 'joda-time', version:'2.3'
	compile group: 'com.google.guava', name: 'guava', version:'15.0'
    compile group: 'org.glassfish.grizzly', name: 'grizzly-http', version:'2.3.11'
    compile group: 'org.glassfish.grizzly', name: 'grizzly-websockets', version:'2.3.11'
    compile 'com.google.code.gson:gson:2.6.2'
	compile group: 'io.thekraken', name: 'grok', version: '0.1.6-SNAPSHOT'
	
	testCompile group: 'junit', name: 'junit', version:'4.+'
    testCompile 'org.assertj:assertj-core:3.8.0'
}
